# webp-android

WebpSample/: settings.gradle
WebpSample/app/: build.gradle
WebpSample/app/src/androidTest/java/au/com/fccapital/webpsample/: ExampleInstrumentedTest.java
WebpSample/app/src/main/: AndroidManifest.xml
WebpSample/app/src/main/java/au/com/fccapital/webpsample/: MainActivity.java
WebpSample/app/src/main/res/layout/: activity_main.xml
WebpSample/app/src/main/res/values/: strings.xml
WebpSample/app/src/test/java/au/com/fccapital/webpsample/: ExampleUnitTest.java
WebpSample/gradle/wrapper/: gradle-wrapper.properties
WebpSample/libwebp/: CMakeLists.txt  build.gradle
WebpSample/libwebp/cpp/: build.gradle
WebpSample/libwebp/cpp/examples/: webpmux.c
WebpSample/libwebp/src/androidTest/java/vn/com/billyphan/libwebp/: ExampleInstrumentedTest.java
WebpSample/libwebp/src/main/: AndroidManifest.xml
WebpSample/libwebp/src/main/cpp/: webp-wraper.cpp
WebpSample/libwebp/src/main/cpp/webp/: animation.cpp  animation.h  bitmap.cpp  bitmap.h  image_io.cpp
WebpSample/libwebp/src/main/java/vn/com/billyphan/libwebp/: Webp.java
WebpSample/libwebp/src/test/java/vn/com/billyphan/libwebp/: ExampleUnitTest.java
